# Budgeting-App

./: CSV_A_accounts_20250901_20251014.csv  README.md  pyproject.toml
src/: budget_data.json
src/budgeting_app/: __init__.py  ai.py  app.py  csv_importer.py  main.py  models.py  storage.py  text_utils.py  viewmodels.py  widgets.py
