[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "budgeting-app"
version = "0.1.0"
description = "Simple Tkinter-based budgeting desktop application."
authors = [{ name = "Your Name" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.30.0",
]

[project.scripts]
budgeting-app = "budgeting_app.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
